Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61042

A QML FileDialog shows a warning in a console after reseting the 'nameFilters' property

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.4.3, 6.5.0, 6.6.0
    • 5.7.0
    • Quick: Dialogs
    • None
    • Windows 7 Professional SP1, QtCreator 4.2.1, Qt 5.7.0
    • de704b633 (dev), c662fb0be (6.5), b75ab7662 (6.4)

    Description

      Steps to reproduce:

      1. Run my FileDialogWarning application.
      2. Press the "Open JPG file" button. You can see that the FileDialog is opened and the file filter "JPG files (*.jpg)" is applied.
      3. Close the FileDialog.
      4. Press the "Open PNG file" button. You can see that the FileDialog is opened and the file filter "PNG files (*.png)" is applied. Also you can see the
        "selectNameFilter: Invalid parameter 'PNG files (.png)' not found in 'JPG files (.jpg)'.
        selectNameFilter: Invalid parameter 'PNG files (.png)' not found in 'JPG files (.jpg)'."
        warning in the console.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-61042
          # Subject Branch Project Status CR V

          Activity

            People

              studiosus Vladimir Belyavsky
              shuriken Alexander Konstantinov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes